public/static/assets/css/styles.css
/* ... */
.berita-terkini-container h4 {
    font-weight: bold;
    font-size: 16px;
    font-family: var(--prompt-font);
    font-style: italic;
    text-transform: uppercase;
}

.berita-terkini-container a {
    margin-top: 10px;
    display: block;
    text-decoration: none;
}

.berita-terkini-container .image-content {
    background-color: silver;
    /* width: 310px;
    height: 172px; */
}

.berita-terkini-container .image-content img {
    object-fit: cover;
    width: 100%;
}

.berita-terkini-container span {
    font-family: var(--lato-font);
    font-size: 14px;
    color: #000000;
    margin-top: 6px;
}

.list-berita-terkini a {
    border-top: 1px solid #e5e5e5;
    padding: 10px 0px;
}

.list-berita-terkini .image-content {
    background-color: silver;
    border-radius: 5px;
    width: 60px;
    height: 60px;
}

.list-berita-terkini .image-content img {
    object-fit: cover;
    border-radius: 5px;
}

.list-berita-terkini p {
    font-family: var(--lato-font);
    font-size: 14px;
    color: #000000;
    font-weight: 700;
    width: 70%;
    overflow-wrap: break-word;
}

/*  RELATED NEWS */

.related-news-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    /* grid-template-rows: 1fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px; */
    gap: 1.5em;
}

.related-news-container .img-news {
    border-radius: 8px;
}

.related-news-container .img-news a img {
    object-fit: cover;
    width: 100%;
    border-radius: 8px;
}

.related-news-container .img-news p {
    font-family: var(--lato-font);
    font-style: normal;
    font-weight: 700;
    font-size: 14px;
}

/* PAGINATION CONTAINER */
.pagination-container ul {
    display: flex;
    list-style-type: none;
    align-items: center;
    justify-content: center;
}

.paginationlist-item:not(:first-child) {
    margin-left: 8px;
}

.paginationlist-item a {
    align-items: center;
    background-color: #e5e5e5;
    border-radius: 8px;
    display: flex;
    font-weight: 700;
    justify-content: center;
    min-height: 36px;
    min-width: 36px;
    padding-left: 0.75rem;
    padding-right: 0.75rem;
    color: white;
}

.paginationlist-item a .iconSVG {
    height: 12px;
    width: 12px;
}

.paginationlist-item a:hover,
.paginationlist-item.active a {
    background-color: #ca0000;
    color: white !important;
}

.paginationlist-item a:hover .iconSVG,
.paginationlist-item.active a .iconSVG {
    fill: #ffffff;
}

/* PHOTO DETAIL */
.black-bg-photo {
    background-color: #000000;
    padding: 20px 10px 80px 10px;
    position: relative;
}

.black-bg-photo .photo-tools {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.black-bg-photo .photo-tools a {
    color: white;
}

.photo-tools .share-links {
    display: flex;
    gap: 10px;
}

.photo-tools button {
    background: none;
    color: white;
}

.photo-tools .share-links a {
    min-height: 36px;
    min-width: 36px;
    padding-left: 0.75rem;
    padding-right: 0.75rem;
    border-radius: 100px;
    border: 1px solid #ffffff;
    display: flex;
    align-items: center;
    justify-content: center;
}

.photo-detail-container {
    margin: 20px;
}

.list-photo-detail button {
    min-height: 30px;
    min-width: 70px;
    border: none;
}

.list-photo-detail button.active {
    min-height: 60px;
    min-width: 100px;
}

.photo-detail-section .info-author {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
}

.photo-detail-section .info-author a,
.photo-detail-section .info-author span {
    color: #000000;
    font-family: var(--lato-font);
    font-size: 14px;
}

.photo-detail-section .all-news-info .editor-photo {
    color: #000000;
    margin-top: 20px;
    padding-top: 20px;
    border-top: 1px solid #e5e5e5;
    font-family: var(--lato-font);
    font-size: 14px;
    display: flex;
    flex-direction: column;
}

.photo-detail-section .all-news-info .synopsis {
    color: #999999;
    margin-top: 20px;
    font-family: var(--lato-font);
    font-size: 14px;
}

.photo-detail-section .info-author span {
    color: #999999;
}

.all-news-info {
    padding: 14px 20px;
}

.photo-detail-section .all-news-info .tag-related-detail {
    margin-top: 20px;
}

.vertical-scroll,
.photo-scroll {
    overflow-x: hidden;
    overflow-y: auto;
    height: 570px;
}

.vertical-scroll::-webkit-scrollbar {
    display: none;
}

.photo-terkini-container {
    margin-top: 35px;
}

.photo-terkini-container h2 {
    font-family: var(--lato-font);
    font-size: 18px;
    font-weight: bolder;
    font-style: italic;
    color: #000000;
}

.latest-photo-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(1, 1fr);
    grid-column-gap: 10px;
    grid-row-gap: 15px;
}

.latest-photo-container figure a {
    display: inline-block;
}

.latest-photo-container figure .foto-content {
    width: 200px;
    height: 112px;
    background-color: silver;
    border-radius: 8px;
}

.latest-photo-container figure .foto-content img {
    border-radius: 8px;
    object-fit: cover;
}

.latest-photo-container figure figcaption {
    margin-top: 10px;
    inline-size: 200px;
}

.latest-photo-container figure figcaption p a {
    color: #000000;
    font-family: var(--lato-font);
    font-size: 14px;
    font-weight: 700;
}

/* Photo Pages */
.photo-breadcrumb {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.photo-breadcrumb a {
    font-family: var(--lato-font);
    font-size: 14px;
    color: #999999;
}

.photo-breadcrumb a:hover {
    color: #ca0000;
}

.photo-breadcrumb li.active a {
    color: #ca0000;
}

.photo-trending h4 {
    font-family: var(--lato-font);
    font-size: 16px;
    font-style: italic;
    font-weight: bold;
}

.photo-trending a {
    font-family: var(--lato-font);
    color: #000000;
    font-size: 14px;
    text-transform: uppercase;
    font-weight: 400;
}

.photo-trending a:hover {
    color: #ca0000;
}
/* ... */

